--- a/reportMaster2/4-Eval.tex
+++ b/reportMaster2/4-Eval.tex
@@ -146,7 +146,7 @@ Compte-tenu de ces équations et des tailles de caches des machines utilisées, 
 
 \begin{table}
 {
-\caption{Tailles optimales des tuiles et macro-tuiles pour les machines de \textsf{PlaFRIM}.}
+\caption{Tailles optimales (et solutions réelles positives) des tuiles et macro-tuiles pour les machines de \textsf{PlaFRIM}.}
 \label{tab:size_cach}
 }
 {
@@ -155,9 +155,9 @@ Compte-tenu de ces équations et des tailles de caches des machines utilisées, 
 Machine & Taille tuile & Taille macro-tuile & Cache L3 & Cache L1 \\
 \hline
 \hline
-Manumanu & $128$ & $128$ & $24$ MB & $256$ KB \\
-Fourmi & $128$ & $64$ & $8192$ KB & $256$ KB \\
-Mistral & $128$ & $128$ & $25$ MB & $256$ KB \\
+Manumanu & $128$ ($252.52$) & $128$ ($221.29$) & $24$ MB & $256$ KB \\
+Fourmi & $128$ ($252.52$) & $64$ ($127.39$) & $8192$ KB & $256$ KB \\
+Mistral & $128$ ($252.52$) & $128$ ($225.84$) & $25$ MB & $256$ KB \\
 \hline
 \end{tabular}
 }
